syntax = "proto3";
package coreum.dex.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/v5/x/dex/types";

// Params keeps gov manageable parameters.
message Params {
  // default_unified_ref_amount is the default approximate amount you need to buy 1USD, used to for tokens without custom value
  string default_unified_ref_amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec"
  ];
  // price_tick_exponent is the exponent used for the price tick calculation
  int32 price_tick_exponent = 2;

  // max_orders_per_denom is the maximum number of orders per denom the user can have
  uint64 max_orders_per_denom = 3;

  // order_reserve is the reserve required to save the order in the order book
  cosmos.base.v1beta1.Coin order_reserve = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}
