syntax = "proto3";
package coreum.dex.v1;

import "google/api/annotations.proto";

option go_package = "github.com/CoreumFoundation/coreum/v4/x/dex/types";

// Query defines the gRPC query service.
service Query {
  // Orders queries all orders.
  rpc Orders(QueryOrdersRequest) returns (QueryOrdersResponse) {
    option (google.api.http).get = "/coreum/dex/v1/orders";
  }
}

// QueryOrdersRequest defines the request type for the `Orders` query.
message QueryOrdersRequest {}

// QueryOrdersRequestResponse defines the response type for the `Orders` query.
message QueryOrdersResponse {}
