syntax = "proto3";
package coreum.wstaking.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "coreum/wstaking/v1/params.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/wstaking/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of x/wstaking module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/coreum/wstaking/v1/params";
  }
}

// QueryParamsRequest defines the request type for querying x/wstaking parameters.
message QueryParamsRequest {}

// QueryParamsResponse defines the response type for querying x/wstaking parameters.
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}
